[gd_scene load_steps=14 format=2]

[ext_resource path="res://Script/Player.gd" type="Script" id=1]
[ext_resource path="res://Images/Player/player.png" type="Texture" id=2]
[ext_resource path="res://Music/Jumper-sound.ogg" type="AudioStream" id=3]
[ext_resource path="res://Music/Ouch1.ogg" type="AudioStream" id=4]
[ext_resource path="res://Music/Ouch2.ogg" type="AudioStream" id=5]
[ext_resource path="res://Images/UI/HintArrow.png" type="Texture" id=6]
[ext_resource path="res://Script/HintArrow.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 4.18959, 0.751375 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 4.17069, 1.19976 )

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("Blob")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=4]

resource_name = "Ouch1"
length = 0.9
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("Ouch1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=5]

resource_name = "Ouch2"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("Ouch2")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 17.3286, 26.9252 )

[node name="Player" type="Node2D"]

[node name="PlayerBody" type="KinematicBody2D" parent="." index="0"]

scale = Vector2( 2.5, 2.5 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Transform" ]

[node name="Sprite" type="Sprite" parent="PlayerBody" index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Region", "Transform", "Visibility", "Z Index" ]

[node name="JumpArea" type="CollisionShape2D" parent="PlayerBody" index="1"]

position = Vector2( 0, 9.75792 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="JumpArea2D" type="Area2D" parent="PlayerBody" index="2" groups=[
"foot",
]]

editor/display_folded = true
position = Vector2( 0.00293126, 2.36782 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="JumpArea" type="CollisionShape2D" parent="PlayerBody/JumpArea2D" index="0"]

position = Vector2( -0.000242661, 8.27657 )
shape = SubResource( 2 )

[node name="Audio" type="Node" parent="PlayerBody" index="3"]

[node name="Blob" type="AudioStreamPlayer2D" parent="PlayerBody/Audio" index="0"]

visible = false
stream = ExtResource( 3 )
volume_db = 24.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="BlobPlay" type="AnimationPlayer" parent="PlayerBody/Audio" index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Blob = SubResource( 3 )
blend_times = [  ]

[node name="Ouch1" type="AudioStreamPlayer2D" parent="PlayerBody/Audio" index="2"]

stream = ExtResource( 4 )
volume_db = 17.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Ouch2" type="AudioStreamPlayer2D" parent="PlayerBody/Audio" index="3"]

stream = ExtResource( 5 )
volume_db = 17.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="OuchPlay" type="AnimationPlayer" parent="PlayerBody/Audio" index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Ouch1 = SubResource( 4 )
anims/Ouch2 = SubResource( 5 )
blend_times = [  ]

[node name="PlayerArea2D" type="Area2D" parent="PlayerBody" index="4" groups=[
"player",
]]

editor/display_folded = true
scale = Vector2( 0.4, 0.4 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Area" type="CollisionShape2D" parent="PlayerBody/PlayerArea2D" index="0"]

position = Vector2( -0.125868, -0.0570811 )
scale = Vector2( 1, 0.991354 )
shape = SubResource( 6 )

[node name="HintArrow" type="Sprite" parent="." index="1"]

visible = false
position = Vector2( 32, -11 )
texture = ExtResource( 6 )
centered = false
script = ExtResource( 7 )
_sections_unfolded = [ "Offset" ]

[connection signal="area_entered" from="PlayerBody/JumpArea2D" to="PlayerBody" method="_on_JumpArea2D_area_entered"]

[connection signal="area_entered" from="PlayerBody/PlayerArea2D" to="PlayerBody" method="_on_PlayerArea2D_area_entered"]


